# ClassCreator

./: .gitignore  CMakeLists.txt  Class Creator.layout  Doxyfile.in  INSTALL.md  README.md  compile-schemas.cmake.in  config.h.in  org.kazires.classcreator.gresource.xml.in  org.kazires.classcreator.gschema.xml.in
cmake modules/: FindConfigPackage.cmake
resources/gui/: classinfogrid.glade  confirmgrid.glade  docinfogrid.glade  preferencesgrid.glade
resources/templates/: header.template  source.template
src/: assistantpage.cpp  assistantpage.h  assistantpage.hpp  classcreatorassistant.cpp  classcreatorassistant.cpp~  classcreatorassistant.h  classcreatorassistant.hpp  classinfopage.cpp  classinfopage.hpp  classpage.cpp  classpage.h  config.h  config.hpp  confirmpage.cpp  confirmpage.h  confirmpage.hpp  datepicker.cpp  datepicker.h  docinfopage.cpp  docinfopage.hpp  documentationpage.cpp  documentationpage.h  inheritancetreeview.cpp  inheritancetreeview.h  intropage.cpp  intropage.h  intropage.hpp  main.cpp  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.hpp  resourcemanager.cpp  resourcemanager.hpp  resources.c  resources.h
templates/: Doxyfile.in  class.doc.header.in  class.doc.source.in  class.header.in  class.namespace.doc.header.in  class.namespace.doc.source.in  class.namespace.header.in  class.namespace.source.in  class.source.in  cmake_uninstall.cmake.in  config.h.in  config_header.in  desktop.in  gresource.xml.in  gschema.xml.in
translations/: es.po
